alignment fixes

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -35,7 +35,7 @@ body {
     padding: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 h1{
